# Misc-Work

./: .directory  .gitignore  linked_list.c  power.c  presentation.c  sudipto.cpp
.metadata/: version.ini
Audio/: README.md  v1.py
C/: a.out  fact  fact.c  gcd.c  newton_raphson.c  prime_factors_AK  prime_factors_AK.c  sin_AK  sin_AK.c  sin_cos.c  sine.c  sine_accuracy.c  sine_graph_y.c  toroman.c
C++/: determinant3x3.cpp  roman_vvk.cpp
C++/ACM ICPC/: ICPC16A.cpp  ICPC16B.cpp  ICPC16D.cpp  bipertite.cpp
C++/C++Learn/: CHRL4.cpp  HFCQ1.cpp  HFCQ2-2.cpp  HFCQ2.cpp  HFCQ3.cpp  HFCQ4.cpp  HFCQ5.cpp  all_permutation_string.cpp  big_integer_division.cpp  calender.cpp  generate-random-numbers.cpp  int_prime.cpp  make_heap.cpp  methods.cpp  new_random.cpp  power_set.cpp  pratyoy.cpp  random.txt  segtree.cpp  tuple.cpp  vector-reserve.cpp
C++/CodeChef/: a.out  gcd.c  test.cpp
C++/Codeforces/: four_divisors.cpp
C++/CompetitiveProgramming3/: base.cpp  (+1 more)
CodeClub/: a.out  linear_time.cpp  quadratic_time.cpp  question.cpp
Odometry/: .gitignore  00.json  00.pkl  01.json  01.pkl  02.json  02.pkl  03.json  03.pkl  controller.py  generate_masks.py  interpolate.py  interpolate_test.py  process.py  read_pkl.py
OpenCV/: CMakeLists.txt  contours.cpp  image.cpp  lomo.cpp  video.cpp  videocapture.cpp  vignette.cpp
OpenCV/Binarization/: CMakeLists.txt  naive.cpp  naive.py
Python/: NoTriangles.py  OPP.py  WordList_IARCS.py  cavity.py  cavity.sample.input  factorial.py  pattern.py  selfDemos.py  sqrt.py  stones.py  trial.py  words.py
Web Development/: index.html  style.css
(+518 files in other folders)
